
Last changelog
==============

Version 4.4.0
-----------------------------
**Improvements**

* Upgrade libraries versions
* Revise project time tracking view
* Support version management in project page
* Support date format associate to user's locale

**Bug Fixes**

* Page path is cached across projects
* Milestone simple view display wrongly
* Display date time field correctly with user custom timezone

Version 4.4.0
-----------------------------
**Improvements**

* Add new page composer in project module
* Allow users can archive project
* Revise milestone list view to allow user can edit, delete milestone
* Revise invite project member that displays user avatar in suggested list
* Display total open bugs, due bugs in bug dashboard
* Clean user session resources properly
* Optimize image sizes

**Bug Fixes**

* Tooptip use the default system language instead of user defined language
* Component and Version do not show the marker of complete right
* Ambiguous email field search criteria in CRM account search page
* Project permissions are cached across projects
* Show project permissions wrongly in Japanese locale

Version 4.3.3
-----------------------------
**Improvements**

* Update Japanese localization
* Update mobile module
* Support chart localization
* Support gantt chart localization
* Improve page template
* Upgrade Vaadin version to 7.2.6
* Improve UIs of projet views includes Bug, Task, Version, Component, Milestone
* Allow users delete comments
* Having the new Time Tracking feature

**Bug Fixes**

* Remove border of Create Project button
* Fix assignment table header misses border
* Fix several broken unit tests
* Fix css issues of email template
* Edit project view is not consistent to other views
* Can not display Japanese in several servlets
* Can not display well on Safari browser due to Vaadin profiler

Version 4.3.2
-----------------------------
**Improvements**

* Update Japanese localization
* Upgrade Jasypt library up to 1.9.2